Implement async GC logging in script runners